fix: stabilize project post-merge and cleanup calling feature
### Summary
This PR stabilizes the project after a major merge. It resolves critical scope-related errors in the backend breaking Docker builds and performs a comprehensive cleanup of the calling feature (Voice/Video) to optimize performance and reduce binary size.

### Technical Changes

#### 1. Backend Stabilization (Docker Fix)
- Resolved a block-scoped variable redeclaration error in chat.gateway.ts that was preventing the message-service container from building.

#### 2. Dependency & Configuration Cleanup
- Removed flutter_webrtc from pubspec.yaml.
- Stripped hardware permissions (Microphone, Bluetooth) from AndroidManifest.xml and Info.plist.

#### 3. Feature Removal & Refactoring
- Deleted the lib/features/call/ directory.
- Removed call-signaling logic from SocketService.
- Fixed duplicate highlightMessage in ChatProvider.

#### 4. UI Consistency
- Converted Call/Video buttons in ChatDetailScreen to placeholders with 'Feature under development' notifications.